<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/backmobile"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="asus.mycityquest.RegisterActivity">

    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/prenomRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_prenom"
            android:textColorHint="#000000"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="1" />

        <AutoCompleteTextView
            android:id="@+id/nomRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_name"
            android:textColorHint="#000000"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="1" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_login"
            android:textColorHint="#000000"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:textColorHint="#000000"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radioButtonParticulier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Particulier" />

                <RadioButton
                    android:id="@+id/radioButtonPro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Professionnel" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/email_valid_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Valider"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
